[gd_scene load_steps=18 format=3 uid="uid://by3ssietdo7x1"]

[ext_resource type="Script" path="res://script/animation/boost.gd" id="1_snkn6"]
[ext_resource type="Texture2D" uid="uid://b8c5mex54uxl5" path="res://images/animation/boost_animation.png" id="1_v2328"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kthir"]
radius = 11.0

[sub_resource type="AtlasTexture" id="AtlasTexture_6tpg2"]
atlas = ExtResource("1_v2328")
region = Rect2(0, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4qk2"]
atlas = ExtResource("1_v2328")
region = Rect2(20, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_8genv"]
atlas = ExtResource("1_v2328")
region = Rect2(40, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_xp5c8"]
atlas = ExtResource("1_v2328")
region = Rect2(60, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_utbsv"]
atlas = ExtResource("1_v2328")
region = Rect2(0, 20, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6mdc"]
atlas = ExtResource("1_v2328")
region = Rect2(20, 20, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_gior5"]
atlas = ExtResource("1_v2328")
region = Rect2(40, 20, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqa5f"]
atlas = ExtResource("1_v2328")
region = Rect2(60, 20, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_k75jq"]
atlas = ExtResource("1_v2328")
region = Rect2(0, 40, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_0elyl"]
atlas = ExtResource("1_v2328")
region = Rect2(20, 40, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0vh5"]
atlas = ExtResource("1_v2328")
region = Rect2(40, 40, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsp6k"]
atlas = ExtResource("1_v2328")
region = Rect2(60, 40, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdckc"]
atlas = ExtResource("1_v2328")
region = Rect2(0, 60, 20, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_qfeo7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tpg2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4qk2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8genv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xp5c8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utbsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6mdc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gior5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqa5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k75jq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0elyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0vh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsp6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdckc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="boost" type="Node2D"]
script = ExtResource("1_snkn6")

[node name="boost_area" type="Area2D" parent="."]
collision_layer = 2

[node name="boost_collision" type="CollisionShape2D" parent="boost_area"]
shape = SubResource("CircleShape2D_kthir")

[node name="boost_animation" type="AnimatedSprite2D" parent="boost_area/boost_collision"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_qfeo7")
frame = 10
frame_progress = 0.0336533
speed_scale = 3.0
